ESASKYPCR-2242 - Fixed double scroll bars on outreach images panel
git-svn-id: https://satscm.esac.esa.int/esasky/esasky-app/trunk@6193 aa7853a0-da02-4334-bf23-07ffea9f4f01

--- a/esasky-cl/src/main/java/esac/archive/esasky/cl/web/client/view/ctrltoolbar/outreachImagePanel.css
+++ b/esasky-cl/src/main/java/esac/archive/esasky/cl/web/client/view/ctrltoolbar/outreachImagePanel.css
@@ -26,7 +26,6 @@
 
 
 .outreachImagePanel__footprintSwitch{
-	position: absolute;
     top: 1px;
     right: 35px;
     line-height: 17px;
@@ -41,8 +40,4 @@
 .outreachImagePanel__opacityLabel {
     margin: 10px auto 5px auto;
     text-align: center;
-}
-
-.outreachImagePanel .popupHeaderLabelWithHelpButton{
-	margin-right: 182px;
 }
